<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="noticeboard_action">Going to>>></string>
	<string name="noticeboard_error">Error!!!Please try again.&#8230;</string>
	<string name="noticeboard_sendToFriend_1">Sending to </string>
	<string name="noticeboard_sendToFriend_2"> friends</string>
	<string name="noticeboard_sendMsg"> Welcome! </string>
	<string name="noticeboard_questCheck"> Receiving reward, please wait&#8230; </string>
	<string name="noticeboard_questNoDid"> Missions not completed&#8230;</string>
	<string name="noticeboard_questNoCompelete_1"> Need to take more actions </string>
	<string name="noticeboard_questNoCompelete_2">  </string>
	<string name="noticeboard_questCompelete"> Achieved </string>
	<string name="noticeboard_questDes"> Mission Details:  </string>
	<string name="noticeWindow_loading">Loading now, please wait</string>
	<string name="invite_error">Click  to refresh friends\' info!</string>
	<string name="fblike_error">Error!!!Please try again.</string>
	<string name="floatbutton_loadingdata_tip">Loading data, please wait&#8230;</string>
	<string name="noticewindow_getawaytext">Don\'t show Announcement today.</string>
	<string name="noticeboard_questgeterror">Cannot get access to the task bar. Please try again!&#62;&#60;</string>
	<string name="noticeboard_invitetitle">Back to Game</string>
	<string name="noticeboard_invitebutton">Invitation sent</string>
	<string name="noticeboard_questDrawed">Collected</string>
	<string name="noticeboard_questCanDraw">Uncollected</string>
	<string name="noticeboard_gotobutton">Go</string>
	<string name="noticeboard_drawbutton">Claim</string>
	<string name="noticeboard_achievebutton">Claimed</string>
	<string name="fbLikeContent">Like us and keep update to the latest news of our game!</string>
	<string name="fbFriendsNumZero">Need to choose at least one friend.</string>
	<string name="fbFriendsNumTitle">Number：</string>
	<string name="fbFriendsAllPick">Select All</string>
	<string name="sharePageCopyButton">Copy Link</string>
	<string name="sharePageFbShareButton">Facebook Share</string>
	<string name="sharePageDescribe">Share your links</string>
	<string name="progressTitle">Please Wait</string>
	<string name="progressContent">Loading&#8230;</string>
	<string name="shareResultSuccess">Succeed!</string>
	<string name="shareResultCancel">Cancel</string>
	<string name="shareResultError">Error!!!Please try again.</string>
	<string name="shareContent">When friends join this game via your link ,you will be rewarded!</string>
	<string name="shareButtonContent">Let\'s play together!</string>
	<string name="shareButtonResult">Copied.</string>
	<string name="gotoInvite">Going to invitation page&#8230;</string>
	<string name="gotoShare">Going to share page&#8230;</string>
	<string name="shareDescribeContent">Share and get more benefits!</string>
	<string name="loadingMsg">Please Wait&#8230;</string>
	<string name="noticeboardinvitebutton">Invite</string>
	<string name="noticeboardrewardbutton">Reward</string>
	<string name="noticeboardsharebutton">Share</string>
	<string name="noticeboardnoticebutton">Notice</string>
	<string name="facebooknologin">Fail,you should login facbook first.</string>
	<string name="loginresultsuccess">Login succeed!</string>
	<string name="loginresultcancel">Login Cancel.</string>
	<string name="loginresulterror">Login error!!Please try again.</string>
</resources>