<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:id="@+id/rlInvite"
    android:background="#F6F6F8">
    <Button 
        android:id="@+id/aboveButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:text="@string/noticeboard_invitetitle"
        />
    <GridView 
        android:id="@+id/inviteGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/aboveButton"
        android:background="#F6F6F8"
        ></GridView>
    <Button 
        android:id="@+id/noDataButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="13sp"
        android:text="@string/invite_error"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        />
    <ImageView 
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:background="#EFF1F3"
        />
    <CheckBox 
        android:id="@+id/allPickCheck"
        android:text="@string/fbFriendsAllPick"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="13sp"
        android:textColor="#73A1FF"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_alignParentLeft="true"
        />
    <TextView 
        android:id="@+id/fbFriendsNum"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="#73A1FF"
        android:textSize="13sp"
        android:layout_toLeftOf="@+id/bottomButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="@string/fbFriendsNumTitle"
        />
    <Button 
        android:id="@+id/bottomButton"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_alignParentRight="true"
        android:text="@string/noticeboard_invitebutton"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        />

</RelativeLayout>
