<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:id="@+id/rlQuest"
    android:background="#F6F6F8">
    <Button 
        android:id="@+id/aboveButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:text="@string/noticeboard_invitetitle"
        />
<!--     <ImageView 
        android:id="@+id/bannerL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pagerContent"
        android:background="@drawable/notice_basicimg"
        />
    <ImageView 
        android:id="@+id/bannerR"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/pagerContent"
        android:background="@drawable/notice_basicimg"
        /> -->
    <TextView 
        android:id="@+id/viewPagerSelectorL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bannerLoop"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="#778899"
        android:background="#FFFFFF"
        android:text="@string/noticeboard_questCanDraw"
        />
    <TextView 
        android:id="@+id/viewPagerSelectorR"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/bannerLoop"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="#778899"
        android:background="#FFFFFF"
        android:text="@string/noticeboard_questDrawed"
        />
     <ImageView 
        android:id="@+id/slideSign"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:background="#1E90FF"
        android:layout_above="@+id/pagerContent"
        />
	<android.support.v4.view.ViewPager
        android:id="@+id/pagerContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/viewPagerSelectorL"
        />
	<TextView 
	    android:id="@+id/bannerDivide"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_above="@+id/bannerLoop"
	    android:background="#F6F6F8"
	    />
	<android.support.v4.view.ViewPager
        android:id="@+id/bannerLoop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/aboveButton"
        />
	<ImageView 
	    android:id="@+id/loadingImage"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:visibility="invisible"
	    android:src="@drawable/notice_loading"
	    />
</RelativeLayout>
